@@ -1,5 +1,7 @@
 Version 3.1.1 - xx xxx 2009
 
+  * Strict Parsing flag not properly passed to
+    JDomCompactBuilder in admin tool. Ticket #59.
   * getMetadata in STANDARD-XML fails compliance check.
     Ticket #60.
 
